# sciutil

./: .editorconfig  .gitignore  Cargo.toml  README.md  deny.toml  justfile  rustfmt.toml  taplo.toml  yamlfmt.yml
.github/workflows/: general.yml  rust.yml
docs/: derivatives.typ
examples/: cycling_velocity.rs
examples/data/: with_time.gpx
examples/gpx/: mod.rs
src/: err.rs  lib.rs
src/display/: mod.rs
src/rounding/: digits.rs  mod.rs  test.rs
src/rounding/digits/: defs.rs  err.rs  mod.rs
src/statistics/: mod.rs
src/statistics/derivatives/: mod.rs  test.rs
src/units/: composition.rs  macros.rs  mod.rs  symbol_tree.rs
src/units/math/: mod.rs  test.rs
