[package]
name = "sciutil"
description = "A library for scientific computation"
authors = ["RemasteredArch"]
repository = "https://github.com/RemasteredArch/sciutil"
readme = true
license = "MPL-2.0"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
# Optionally derive `Serialize`/`Deserialize` on sciutil's types, enabled with `--features serde`.
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0.12"

[dev-dependencies]
# Used to verify the `Serialize`/`Deserialize` implementations of structs.
#
# This makes Serde a required dependency for tests.
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
